test/fail/double-extend-keyword.app
//Syntax error

application f_Po5__2B8V

  extend extend function Kyk_b ( ) : Void { }
  
  page root(){}